# TracingAndDetectingAssignmentTwo

./: README.md
include/: consts.hpp  randomForest.hpp  utilities.hpp
src/: randomForest.cpp  utilities.cpp
task1/: CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cpp  Makefile  cmake_install.cmake  rgbToGray  rgbToGray.cpp  task1  task1.cpp
task2/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  randomForest.cpp  randomForest.hpp  randomMainfunksjoner.cpp  task2  task2.cpp  testOpenFiles.cpp  utilities.cpp
task2/include/: randomForest.hpp  utilities.hpp
task2/task2Data/train/00/: hei.txt
task3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  randomForest.cpp  task3  task3.cpp
