cmake_minimum_required(VERSION 3.1)
set (CMAKE_CXX_STANDARD 11)
project( task2 )
find_package( OpenCV REQUIRED )
add_definitions(-DTASK_3)
include_directories( ${OpenCV_INCLUDE_DIRS} ../include)
set(SOURCES task3.cpp ../src/randomForest.cpp ../src/utilities.cpp)
add_executable(task3 ${SOURCES})
target_link_libraries( task3 ${OpenCV_LIBS} )